Fleshed out main wiki page through web user interface.  Added a very basic "development road map."

--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -1,13 +1,27 @@
 #summary Main page for the FeverelWeb project.
+#labels Featured
 
 = Introduction =
 
-[http://feverelweb.googlecode.com/svn/trunk/index.html Current Site]
+!FeverelWeb is a Web application that allows textual scholars to read and compare different editions and versions of George Meredith's 19th century novel, _The Ordeal of Richard Feverel_.  You can access the latest version here:
+
+http://feverelweb.googlecode.com/svn/trunk/index.html
 
 
-= Details =
+= Status =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+You can currently use !FeverelWeb to read and compare one chapter from three different versions of the novel.
+
+
+= Development Road Map =
+
+We are pursuing two parallel goals:
+  * Improve the user interface for reading and comparing texts.
+  * Add annotated text for all chapters of all important _Feverel_ editions and versions.
+
+In the long term, we'd like to go beyond _Feverel_ and develop a front end for displaying many texts that are electronically encoded in formats such as [http://www.tei-c.org/ TEI].
+
+
+= Contribution =
+
+We welcome your comments, ideas, and code patches on the [http://code.google.com/p/feverelweb/issues/ issue tracker]!
